--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,6 @@ repositories {
 }
 
 dependencies {
-    compile 'org.spongepowered:spongeapi:5.0.0'
+    compile 'org.spongepowered:spongeapi:5.2.0-20170814.172003-8'
     compile project(':GeoWorldLibrary')
 }
